:art: Align database attributes with editor https://github.com/siyuan-note/siyuan/issues/11371

--- a/app/src/assets/scss/protyle/_protyle.scss
+++ b/app/src/assets/scss/protyle/_protyle.scss
@@ -350,7 +350,8 @@
     }
 
     .protyle-title,
-    .protyle-background__ia {
+    .protyle-background__ia,
+    .protyle-db-attr {
       transition: margin .3s cubic-bezier(.25, .46, .45, .94) 0ms;
     }
   }
